--- a/package.json
+++ b/package.json
@@ -8,16 +8,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
     "expo": "~37.0.3",
-    "mem": "^6.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-elements": "^1.2.0",
-    "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "~0.11.7",
-    "react-navigation": "^4.3.7"
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
